<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.wlb.pndecoder.view.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></com.wlb.pndecoder.view.TitleBar>

    <TextView
        android:id="@+id/tv_histroy"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@drawable/bg_translate_selector"
        android:gravity="center"
        android:text="@string/title_histroy"
        android:textColor="@color/txt"
        android:textSize="@dimen/sp_18" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/c0c0c0" />

    <TextView
        android:id="@+id/tv_search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@drawable/bg_translate_selector"
        android:gravity="center"
        android:text="@string/title_search"
        android:textColor="@color/txt"
        android:textSize="@dimen/sp_18" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/c0c0c0" />

    <TextView
        android:id="@+id/tv_price_set"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@drawable/bg_translate_selector"
        android:gravity="center"
        android:text="@string/title_price_set"
        android:textColor="@color/txt"
        android:textSize="@dimen/sp_18" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/c0c0c0" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/bg_rect_selector"
        android:gravity="center"
        android:text="@string/title_logout"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18" />

</LinearLayout>