<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <ImageView
                    android:id="@+id/iv_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/bg" />

                <TextView
                    android:id="@+id/tv_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/dp_10"
                    android:text="@string/title_setting"
                    android:textColor="@color/txt"
                    android:textSize="@dimen/sp_16" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginRight="@dimen/dp_20">

                    <TextView
                        android:id="@+id/btn_takephoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/dp_10"
                        android:drawableTop="@mipmap/ic_sao"
                        android:gravity="center"
                        android:paddingBottom="@dimen/dp_5"
                        android:paddingLeft="@dimen/dp_20"
                        android:paddingRight="@dimen/dp_20"
                        android:paddingTop="@dimen/dp_5"
                        android:text="@string/title_takephoto"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16" />

                    <TextView
                        android:id="@+id/btn_voice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/dp_20"
                        android:drawablePadding="@dimen/dp_10"
                        android:drawableTop="@mipmap/ic_voice"
                        android:gravity="center"
                        android:paddingBottom="@dimen/dp_5"
                        android:paddingLeft="@dimen/dp_20"
                        android:paddingRight="@dimen/dp_20"
                        android:paddingTop="@dimen/dp_5"
                        android:text="@string/title_voice"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16" />

                    <TextView
                        android:id="@+id/btn_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="right"
                        android:drawablePadding="@dimen/dp_10"
                        android:drawableTop="@mipmap/ic_image"
                        android:gravity="center"
                        android:paddingBottom="@dimen/dp_5"
                        android:paddingLeft="@dimen/dp_20"
                        android:paddingRight="@dimen/dp_20"
                        android:paddingTop="@dimen/dp_5"
                        android:text="@string/title_image"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16" />

                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/dp_20"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:paddingTop="@dimen/dp_20">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_40"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_province"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_index_edit_left"
                            android:gravity="center"
                            android:paddingLeft="@dimen/dp_20"
                            android:paddingRight="@dimen/dp_20"
                            android:text="京" />

                        <EditText
                            android:id="@+id/edit_result"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_index_edit_right"
                            android:hint="@string/title_edit_hint"
                            android:imeOptions="actionDone"
                            android:paddingLeft="@dimen/dp_10"
                            android:digits="@string/edit_en"
                            android:paddingRight="@dimen/dp_10"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"
                            android:textColor="@color/txt"
                            android:textColorHint="@color/c0c0c0"
                            android:textSize="@dimen/sp_16" />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_20"
                    android:background="@drawable/bg_btn_selector"
                    android:paddingBottom="@dimen/dp_5"
                    android:paddingLeft="@dimen/dp_20"
                    android:paddingRight="@dimen/dp_20"
                    android:paddingTop="@dimen/dp_5"
                    android:text="@string/title_intro"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_30"
                    android:text="战略合作伙伴"
                    android:textSize="@dimen/sp_12" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_33"
                        android:layout_marginRight="@dimen/dp_20"
                        android:layout_weight="1"
                        android:background="@mipmap/ic_link_rb"
                        android:scaleType="centerCrop" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_33"
                        android:layout_marginRight="@dimen/dp_20"
                        android:layout_weight="1"
                        android:background="@mipmap/ic_link_tpy"
                        android:scaleType="centerCrop" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_33"
                        android:layout_marginRight="@dimen/dp_20"
                        android:layout_weight="1"
                        android:background="@mipmap/ic_link_pa"
                        android:scaleType="centerCrop" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_33"
                        android:layout_marginRight="@dimen/dp_10"
                        android:layout_weight="1"
                        android:background="@mipmap/ic_link_dd"
                        android:scaleType="centerCrop" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_33"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_weight="1"
                        android:background="@mipmap/ic_link_ta"
                        android:scaleType="centerCrop" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/c3c3c3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginRight="@dimen/dp_10"
                        android:text="温馨提示"
                        android:textColor="@color/c3c3c3"
                        android:textSize="@dimen/sp_12" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/c3c3c3" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/dp_5"
                    android:text="交强险/车船税可提前90天投保\n商业险可提前90天投保"
                    android:textColor="@color/c3c3c3"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/voice_tips"
        layout="@layout/pop_voice_speech"
        android:visibility="gone" />
</RelativeLayout>
